--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $fonts: '#{$assets}/fonts';
 //
 $color-white: #ffffff;
 $color-black: #000000;
+$color-green: #423e22;
 $color-yellow: #fee587;
 $color-button-text: #6a6961;
 $color-text: $color-black;
