--- a/src/styles/modules/_piling-sections.scss
+++ b/src/styles/modules/_piling-sections.scss
@@ -20,6 +20,7 @@ main {
     background-size: cover;
 
     h1 {
+        @extend %font-condensed;
         @extend %font-size-headline;
         text-transform: uppercase;
     }
@@ -54,12 +55,15 @@ main {
     .section-text-wrapper {
         @extend %font-size-standard;
         position: absolute;
-        top: 60%;
-        left: 12vw;
-        max-width: 30em;
-        transform: translate(0, -50%);
+        transition: .25s ease-in-out;
+        transition-property: opacity;
         color: $color-white;
         font-weight: bold;
+        opacity: 0;
+
+        &.visible {
+            opacity: 1;
+        }
 
         p {
             margin-bottom: 1.5em;
@@ -76,9 +80,40 @@ main {
     }
 }
 
-.piling-section.visible {
-    .section-midground,
-    .section-foreground {
-        transform: scale(1) translateY(0);
+.piling-section {
+    &.visible {
+        .section-midground,
+        .section-foreground {
+            transform: scale(1) translateY(0);
+        }
+    }
+
+    // Custom styling for the slides
+    &:first-child,
+    &:nth-child(3) {
+        .section-headline-wrapper {
+            left: 30%;
+        }
+
+        h1 span {
+            margin-left: 1.3em;
+        }
+    }
+
+    &:nth-child(2) {
+        .section-headline-wrapper {
+            top: 25%;
+        }
+
+        h1 {
+            margin-left: -1em;
+        }
+
+        .section-text-wrapper {
+            top: 61%;
+            left: 20vw;
+            max-width: 30em;
+            transform: translate(0, -50%);
+        }
     }
 }
