Added rudimentary footer

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,6 +14,7 @@ $color-black: #000000;
 $color-green: #423e22;
 $color-yellow: #fee587;
 $color-button-text: #6a6961;
+$color-footer-text: #cfccbf;
 $color-text: $color-black;
 
 
